<resources>
    <string name="app_name" translatable="false">Dunno Chat</string>
    <string name="otp_verification" translatable="false">OTP Verification</string>
    <string name="tap_to_chat" translatable="false">Tap to chat</string>
    <string name="_20_04" translatable="false">20:04</string>
    <string name="sample_name" translatable="false">Sample Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nam_of_your_account" translatable="false">Nam of your account</string>
    <string name="view_my_profile" translatable="false">View my profile</string>
    <string name="account" translatable="false">Account</string>
    <string name="dark_mode" translatable="false">Dark Mode</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="loadNotification" translatable="false">TODO</string>
    <!-- -->
    <string name="account_offline" translatable="false">Connection lost</string>
    <string name="btn_chat" translatable="false">Chat</string>
    <string name="btn_call" translatable="false">Call</string>
    <string name="btn_join" translatable="false">Join</string>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="channel_name_empty">Channel name can not be empty</string>
    <string name="channel_name_too_long">Channel name can not exceed 64 characters</string>
    <string name="channel_name_starts_with_space">Channel name can not start with space</string>
    <string name="channel_name_literal_null">Channel name can not be \"null\"</string>
    <string name="channel_title" translatable="false">%s(%d)</string>
    <string name="frame_rate_value_with_unit" translatable="false">%d fps</string>
    <string name="hint_friend">Friends name</string>
    <string name="hint_channel">Channel name</string>
    <string name="join_channel_failed">Join channel failed</string>
    <string name="login_failed">Login failed</string>
    <string name="message_cached">Message cached by server</string>
    <string name="peer_offline">Peer is offline</string>
    <string name="reconnecting">Network reconnecting..</string>
    <string name="single_input">Single line input</string>
    <string name="str_send">Send</string>
    <string name="send_msg_failed">Failed to send message</string>
    <string name="title_peer">Peer to peer</string>
</resources>