<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AccountDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/achivoblank"
            android:padding="16sp"
            android:text="Setting"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/profile_account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_dash"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            android:paddingTop="16sp"
            android:paddingEnd="16sp"
            android:paddingBottom="24sp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNameAccountAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nam_of_your_account"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textViewLoadProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/view_my_profile" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:src="@drawable/icons8_edit_profile_32px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/componentModeLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="8sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            android:paddingEnd="16sp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/icons8_moon_symbol_24px" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/dark_mode"

                android:textSize="14sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/componentAccountLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="8sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            android:paddingEnd="16sp">

            <ImageView
                android:id="@+id/btnAccountLoading"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="TODO"
                android:src="@drawable/icons8_name_24px" />

            <TextView
                android:id="@+id/textViewAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/account" />

            <ImageView
                android:id="@+id/ibtnAccountForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="TODO"
                android:src="@drawable/icons8_forward_24px"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/componentNotificationLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="8sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            android:paddingEnd="16sp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/icons8_notification_24px" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/notification" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/loadNotification"
                android:src="@drawable/icons8_forward_24px"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/componentPrivacyLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="8sp"
            android:gravity="fill_horizontal|center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            android:paddingEnd="16sp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/icons8_privacy_24px" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Privacy and Security" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/icons8_forward_24px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/componentInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="8sp"
            android:gravity="fill_horizontal|center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            android:paddingEnd="16sp">

            <ImageView
                android:id="@+id/imageInfo"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/icons8_info_24px_1" />

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="About" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#B55050"
                android:text="Log Out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.453"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.157" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>